<resources>
    <string name="app_dev_name">(DEV)라이어게임</string>
    <string name="app_name">라이어게임</string>

    <string name="txt_save">저장</string>
    <string name="txt_ok">확인</string>
    <string name="txt_cancle">취소</string>


    <!--  Setting 관련  -->
    <string name="settings_mode">MODE : </string>
    <string-array name="settings_modes">
        <item>assets</item>
        <item>absolute</item>
        <item>external</item>
    </string-array>

    <string name="settings_url">URL : </string>
    <string name="settings_directory_path">Directory Path : </string>
    <string name="settings_save_fail">external 모드를 사용하시려면, 외부 저장소 권한이 필요 합니다.</string>

    <!--  제시어 확인 화면  -->
    <string name="text_keyword_check">제시어를 확인해주세요.</string>
    <string name="btn_text_keyword_check">제시어 확인하기</string>
    <string name="text_category">주제 : </string>

    <string name="text_liar1">당신은</string>
    <string name="text_liar2">라이어</string>
    <string name="text_liar3">입니다.</string>

    <string name="text_spy">스파이</string>
    <string name="text_spy_description">라이어가 들키지 않도록 도와주어야 합니다.</string>

    <string name="btn_txt_next">N E X T</string>

    <string name="txt_alert_message_next">더 이상 수정할 수 없습니다.\n그래도 이동하시겠습니까?</string>
    <string name="txt_alert_message_cancel">그림 설명을 그만하시겠습니까?</string>
    <string name="txt_alert_message_close">라이어 지목이 끝났습니까?\n그림 설명을 종료합니다.</string>

    <string name="txt_toast_readonly">보기 전용으로 전환 되었습니다.</string>

    <string name="txt_anim_swipe_message">좌우 스와이프로 그림 힌트를 확인하세요.\n과연 누가 거짓말을 하고 있을까요?</string>
</resources>