<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_seq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="번째 순서"
            android:textColor="#000"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/ll_pop"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_category"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pop"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/rec_black_line">

        <LinearLayout
            android:id="@+id/ll_blind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_keyword_check"
                    android:textColor="#000"
                    android:textSize="25dp"
                    android:textAlignment="center"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_check_keyword"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:background="@drawable/rec_black_selector"
                    android:gravity="center"
                    android:text="@string/btn_text_keyword_check"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_keyword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone" >
            <!-- 제시어 -->
            <TextView
                android:id="@+id/tv_keyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="#FF5722"
                android:textStyle="bold"/>

            <!-- 라이어 -->
            <LinearLayout
                android:id="@+id/ll_liar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:text="@string/text_liar1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textAlignment="center"
                    android:textColor="#FF5722"
                    android:textStyle="bold"
                    android:text="@string/text_liar2"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:text="@string/text_liar3"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>